--- a/index.html
+++ b/index.html
@@ -2,68 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f9;
-            color: #333;
-        }
-        header {
-            background-color: #4CAF50;
-            color: white;
-            padding: 1rem 2rem;
-            text-align: center;
-        }
-        section {
-            padding: 2rem;
-        }
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 1rem;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-        .project {
-            margin-bottom: 1.5rem;
-        }
-        .project h3 {
-            color: #4CAF50;
-        }
-    </style>
+    <meta http-equiv="refresh" content="0; url=https://mekala-port.netlify.app/" />
+    <title>Redirecting...</title>
 </head>
 <body>
-    <header>
-        <h1>Welcome to My Portfolio</h1>
-    </header>
-    <section>
-        <h2>About Me</h2>
-        <p>Hi! I'm Harsha, a passionate coder with a love for Python and creating cool projects. </p>
-        <p>I'm also exploring areas like web scraping, APIs, and creative coding projects like Pokémon battles!</p>
-    </section>
-    <section>
-        <h2>My Projects</h2>
-        <div class="project">
-            <h3>QR Code Generator</h3>
-            <p>A tool that creates custom QR codes for different needs.</p>
-        </div>
-        <div class="project">
-            <h3>Pokémon Battle Game</h3>
-            <p>An exciting project bringing Pokémon battles to life through code.</p>
-        </div>
-        <div class="project">
-            <h3>Web Scraping British Airways Reviews</h3>
-            <p>A data project that collects and analyzes airline reviews.</p>
-        </div>
-    </section>
-    <footer>
-        <p>&copy; 2025 Harsha's Portfolio</p>
-    </footer>
+    <p>If you are not redirected automatically, <a href="https://mekala-port.netlify.app/">click here</a>.</p>
 </body>
 </html>
