--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0; url=https://mekala-port.netlify.app/" />
-    <title>Redirecting...</title>
+    <title>Hello...Redirecting...</title>
 </head>
 <body>
     <p>If you are not redirected automatically, <a href="https://mekala-port.netlify.app/">click here</a>.</p>
