--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://mekala-port.netlify.app/" />
+    <meta http-equiv="refresh" content="0; url=https://mekala-port.netlify.app/">
     <title>Hello...Redirecting...</title>
+    <script>
+        // JavaScript fallback to ensure redirect happens
+        window.location.href = "https://mekala-port.netlify.app/";
+    </script>
 </head>
 <body>
     <p>If you are not redirected automatically, <a href="https://mekala-port.netlify.app/">click here</a>.</p>
